# musidy-app

./: .gitignore  CMakeLists.txt  README.md
source/: Instrument.cpp  Instrument.hpp  Interface.cpp  Interface.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Renderer.cpp  Renderer.hpp  SdlWindow.cpp  SdlWindow.hpp  SongGenerator.cpp  SongGenerator.hpp  SoundSystem.cpp  SoundSystem.hpp  main.cpp  utils.cpp  utils.hpp
source/songCreation/: MusicScore.cpp  MusicScore.hpp  ScoreGenerator.cpp  ScoreGenerator.hpp  ScorePlayer.cpp  ScorePlayer.hpp  SongScore.cpp  SongScore.hpp  chordProgressions.cpp  chordProgressions.hpp  noteUtils.cpp  noteUtils.hpp
tests/: TestSongGenerator.cpp  catch.cpp  testNoteUtils.cpp  testUtils.cpp
